fixed bad alignement for breakbar phases on CR actor status

--- a/GW2EIBuilders/Resources/ei.css
+++ b/GW2EIBuilders/Resources/ei.css
@@ -139,7 +139,7 @@
 
 .cr-breakbar-phase-display {
     font-size: 0.65rem;
-    width: 180px;
+    width: 100%;
 }
 
 .squad-details {
